--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -1,12 +1,18 @@
-<main class="album-view container narrow">
+<!-- <main class="album-view container narrow"> -->
+<!-- add ngRepeat here? -->
+<main class="album-view container narrow" ng-repeat="album in collection.albums">
      <section class="clearfix">
          <div class="column half">
-             <img src="/assets/images/album_covers/01.png" class="album-cover-art">
+            <!-- <img src="/assets/images/album_covers/01.png" class="album-cover-art"> -->
+            <img src="{{ album.albumArtUrl }}" class="album-cover-art">
          </div>
          <div class="album-view-details column half">
-             <h2 class="album-view-title">The Colors</h2>
+             <!-- <h2 class="album-view-title">The Colors</h2>
              <h3 class="album-view-artist">Pablo Picasso</h3>
-             <h5 class="album-view-release-info">1909 Spanish Records</h5>
+             <h5 class="album-view-release-info">1909 Spanish Records</h5> -->
+             <h2 class="album-view-title">{{ album.title }}</h2>
+             <h3 class="album-view-artist">{{ album.artist }}</h3>
+             <h5 class="album-view-release-info">{{ album.year}} + "  " + {{ album.label }}</h5>
          </div>
      </section>
      <table class="album-view-song-list">
