--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,5 +1,7 @@
  <section class="hero-content">
      <h1 class="hero-title">Turn the music up!</h1>
+     <h1 class="hero-title">{{ landing.heroTitle }}</h1>
+     <!--angular auto updates text whenever heroTitle property changes  Angular Expression  -->
  </section>
 
  <section class="selling-points container clearfix">
