--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -1,6 +1,8 @@
 <section class="album-covers container clearfix">
      <!-- <div class="collection-album-container column fourth"> -->
-     <div class="collection-album-container column fourth" ng-repeat="album in collection.albums">
+     <!-- <div class="collection-album-container column fourth" ng-repeat="album in collection.albums"> -->
+     <!-- add track by $index, else get duplicate key error -->
+     <div class="collection-album-container column fourth" ng-repeat="album in collection.albums track by $index">
          <!-- <img src="/assets/images/album_covers/01.png"/> -->
          <img src="{{ album.albumArtUrl }}">
          <div class="collection-album-info caption">
