--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -27,20 +27,22 @@
            <h2 class="artist-song-mobile"></h2>
            <h3 class="artist-name">artist: {{ playerBar.albumData.artist }}</h3>
            <div class="seek-control">
-               <div class="seek-bar">
+               <!-- <div class="seek-bar">
                    <div class="fill"></div>
                    <div class="thumb"></div>
-               </div>
+               </div> -->
+               <seek-bar></seek-bar>
                <div class="current-time"></div>
                <div class="total-time">time: {{ playerBar.songPlayer.currentSong.duration }}</div>
            </div>
        </div>
        <div class="control-group volume">
            <span class="icon ion-volume-high"></span>
-           <div class="seek-bar">
+           <!-- <div class="seek-bar">
                <div class="fill"></div>
                <div class="thumb"></div>
-           </div>
+           </div> -->
+           <seek-bar></seek-bar>
        </div>
      </div>
  </section>
