--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -34,7 +34,8 @@
        </div>
        <div class="control-group volume">
            <span class="icon ion-volume-high"></span>
-           <seek-bar></seek-bar>
+<!-- Assignment 10 -->
+           <seek-bar value="{{ playerBar.songPlayer.volume }}" max="{{ 100 }}" on-change="playerBar.songPlayer.setVolume(value)"></seek-bar>
        </div>
      </div>
  </section>
