--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -28,8 +28,9 @@
            <h3 class="artist-name">By artist: {{ playerBar.albumData.artist }}</h3>
            <div class="seek-control">
                <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
-               <div class="current-time"></div>
-               <div class="total-time">Time: {{ playerBar.songPlayer.currentSong.duration }}</div>
+               <!-- <div class="current-time">{{ playerBar.songPlayer.currentTime }}</div> -->
+               <div class="current-time">{{ playerBar.songPlayer.currentTime | timecode }}</div>
+               <div class="total-time"> {{ playerBar.songPlayer.currentSong.duration | timecode }}</div>
            </div>
        </div>
        <div class="control-group volume">
